--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,5 @@
 .pt-footer {
-  background-color: #fff;
-  border-top: 1px solid #e5e7eb;
+  background-color: #f9fcff;
   padding: 16px 0;
   text-align: center;
 }
