--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   z-index: 50;
-  background: #fff !important;
+  background: #fff;
   border-bottom: 1px solid #f9fcff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   width: 100%;
