--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   top: 0;
   z-index: 50;
   border-bottom: 1px solid #f9fcff;
-  background: #f9fcff !important;
+  background: white !important;
 }
 
 .pt-header-inner {
